--- a/lab 3 - advanced JS/package.json
+++ b/lab 3 - advanced JS/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "serve",
-    "build": "echo This is a static template, there is no bundler or bundling involved!"
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/codesandbox-app/static-template#readme",
   "devDependencies": {
-    "serve": "^11.2.0"
+    "serve": "^11.2.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0"
+
   }
 }
